unpackaged/main/default/objects/Survey__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Account__c &amp;  AnnualNPS_Account__c</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>