unpackaged/main/default/objects/Survey__c/fields/AnnualNPS_Account__c.field-meta.xml
<CustomField>
    <fullName>AnnualNPS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (NPS)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surveys (Account (NPS))</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>