unpackaged/main/default/objects/Survey__c/fields/AnnualNPS_Contact__c.field-meta.xml
<CustomField>
    <fullName>AnnualNPS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact (NPS)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys (Contact (NPS))</relationshipLabel>
    <relationshipName>Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>