unpackaged/main/default/objects/Survey__c/fields/AnnualNPS_Role__c.field-meta.xml
<CustomField>
    <fullName>AnnualNPS_Role__c</fullName>
    <inlineHelpText>Role that was selected in survey in response to &quot;What is your primary role?&quot; question.</inlineHelpText>
    <label>Role (NPS)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner / President</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Leasing Agent</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>