unpackaged/main/default/objects/Survey__c/fields/Automation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Automation_Error_Message__c</fullName>
    <inlineHelpText>Message produced in Automation.</inlineHelpText>
    <label>Automation Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>