unpackaged/main/default/objects/Survey__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <description>R179353</description>
    <formula>Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName</formula>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>