unpackaged/main/default/objects/Survey__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>R178654</description>
    <formula>IF(ISNULL(Survey_Date__c) , CreatedDate, Survey_Date__c)</formula>
    <inlineHelpText>If Survey Date is blank this field populates the Created Date. 
If Survey Date is not blank this field populates the Survey Date.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>