unpackaged/main/default/objects/Survey__c/fields/Completed_NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>Completed_NPS_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed NPS Survey</label>
    <type>Checkbox</type>
</CustomField>