unpackaged/main/default/objects/Survey__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>Contact__c  &amp;  AnnualNPS_Contact__c</formula>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>