unpackaged/main/default/objects/Survey__c/fields/Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role__c</fullName>
    <formula>Employee__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Role</label>
    <type>Text</type>
</CustomField>