unpackaged/main/default/objects/Survey__c/fields/Expectation_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Expectation_Analysis__c</fullName>
    <description>R1916591</description>
    <label>Expectation Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>