unpackaged/main/default/objects/Survey__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>How do you like your _________?</description>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>