unpackaged/main/default/objects/Survey__c/fields/Greatest_Impact_on_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Greatest_Impact_on_Confidence__c</fullName>
    <description>APM; R2029811; Edited by: Auto</description>
    <label>Greatest Impact on Confidence</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>