unpackaged/main/default/objects/Survey__c/fields/Intercom_Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Survey_Id__c</fullName>
    <externalId>true</externalId>
    <label>Intercom Survey Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>