unpackaged/main/default/objects/Survey__c/fields/Internal_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Internal_Feedback__c</fullName>
    <description>R1916591</description>
    <label>Internal Feedback</label>
    <length>250</length>
    <type>Text</type>
</CustomField>