unpackaged/main/default/objects/Survey__c/fields/MyCase_NPS_Month__c.field-meta.xml
<CustomField>
    <fullName>MyCase_NPS_Month__c</fullName>
    <label>MyCase NPS Month</label>
    <length>15</length>
    <type>Text</type>
</CustomField>