unpackaged/main/default/objects/Survey__c/fields/NPS_Detractor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Detractor__c</fullName>
    <formula>CASE( Score__c, 6, 1, 5, 1, 4, 1, 3, 1, 2, 1, 1, 1, 0, 1, 0)</formula>
    <label>NPS Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>