unpackaged/main/default/objects/Survey__c/fields/NPS_Neutral__c.field-meta.xml
<CustomField>
    <fullName>NPS_Neutral__c</fullName>
    <formula>CASE( Score__c, 7, 1, 8, 1, 0)</formula>
    <label>NPS Neutral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>