unpackaged/main/default/objects/Survey__c/fields/NPS_Promoter__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoter__c</fullName>
    <formula>CASE( Score__c, 9, 1, 10, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>