unpackaged/main/default/objects/Survey__c/fields/NPS_Qualified__c.field-meta.xml
<CustomField>
    <fullName>NPS_Qualified__c</fullName>
    <formula>IF(ISBLANK( Score__c ), 0, 1)</formula>
    <label>NPS Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>