unpackaged/main/default/objects/Survey__c/fields/NPS_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey_Status__c</fullName>
    <label>NPS Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>