unpackaged/main/default/objects/Survey__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>