unpackaged/main/default/objects/Survey__c/fields/Original_Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Original_Employee_Role__c</fullName>
    <description>R2024855</description>
    <label>Original Employee Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>