unpackaged/main/default/objects/Survey__c/fields/Possible_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Possible_Improvements__c</fullName>
    <description>If you did not rate us a 10, what can we do to improve your rating?</description>
    <label>Possible Improvements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>