unpackaged/main/default/objects/Survey__c/fields/Product_Rating__c.field-meta.xml
<CustomField>
    <fullName>Product_Rating__c</fullName>
    <description>Customer rating of the product and its features using CSAT survey model</description>
    <inlineHelpText>How satisfied are you with the features and functionality?</inlineHelpText>
    <label>Product Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>