unpackaged/main/default/objects/Survey__c/fields/Product_Rating_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Rating_Comments__c</fullName>
    <description>Comments provided by the customer in relation to the Product Rating</description>
    <inlineHelpText>Comments provided by the customer in relation to the Product Rating</inlineHelpText>
    <label>Product Rating Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>