unpackaged/main/default/objects/Survey__c/fields/Product_User__c.field-meta.xml
<CustomField>
    <fullName>Product_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product User</label>
    <referenceTo>Product_User__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>