unpackaged/main/default/objects/Survey__c/fields/Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Request_Comments__c</fullName>
    <description>R178186</description>
    <label>Request Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>