unpackaged/main/default/objects/Survey__c/fields/Risk_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Risk_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Case Created</label>
    <type>Checkbox</type>
</CustomField>