unpackaged/main/default/objects/Survey__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>How likely are you to recommend AppFolio based on your experience? (1-10 with 10 being best)</description>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>