unpackaged/main/default/objects/Survey__c/fields/Score_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Score_Explanation__c</fullName>
    <description>If you did not rate us a 10, what could we do to improve your support experience?</description>
    <label>Score Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>