unpackaged/main/default/objects/Survey__c/fields/Score_Explanation_Question__c.field-meta.xml
<CustomField>
    <fullName>Score_Explanation_Question__c</fullName>
    <inlineHelpText>Question Asked on Survey</inlineHelpText>
    <label>Score Explanation Question</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>