unpackaged/main/default/objects/Survey__c/fields/Seeing_the_Benefits_I_Expected__c.field-meta.xml
<CustomField>
    <fullName>Seeing_the_Benefits_I_Expected__c</fullName>
    <description>R1812653</description>
    <label>Seeing the Benefits I Expected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>