unpackaged/main/default/objects/Survey__c/fields/Seeing_the_Benefits_I_Expected_Comments__c.field-meta.xml
<CustomField>
    <fullName>Seeing_the_Benefits_I_Expected_Comments__c</fullName>
    <description>R1812653</description>
    <label>Seeing the Benefits I Expected Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>