unpackaged/main/default/objects/Survey__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Indicates which type of service the survey is related to</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Dev Support</fullName>
            </value>
            <value>
                <fullName>Payments Retention</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Software Retention</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>