unpackaged/main/default/objects/Survey__c/fields/Support_Interaction_Comments__c.field-meta.xml
<CustomField>
    <fullName>Support_Interaction_Comments__c</fullName>
    <description>Comments provided by the customer in relation to the Support Interaction Rating</description>
    <inlineHelpText>Comments provided by the customer in relation to the Support Interaction Rating</inlineHelpText>
    <label>Support Interaction Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>