unpackaged/main/default/objects/Survey__c/fields/Support_Interaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Support_Interaction_Rating__c</fullName>
    <description>Customer rating of the support interaction using CSAT survey model</description>
    <inlineHelpText>How satisfied are you with the support agent interaction?</inlineHelpText>
    <label>Support Interaction Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>