unpackaged/main/default/objects/Survey__c/fields/Survey_Category__c.field-meta.xml
<CustomField>
    <fullName>Survey_Category__c</fullName>
    <label>Survey Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Admin/Dupe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>