unpackaged/main/default/objects/Survey__c/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <description>R178334</description>
    <label>Survey Date</label>
    <type>DateTime</type>
</CustomField>