unpackaged/main/default/objects/Survey__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>IM; R2133547; Edited: auto</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Post-Migration</fullName>
            </value>
            <value>
                <fullName>Post-Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>