unpackaged/main/default/objects/Survey__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for request R151762</description>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>