unpackaged/main/default/objects/Survey__c/recordTypes/BizSys_Requests.recordType-meta.xml
<RecordType>
    <fullName>BizSys_Requests</fullName>
    <active>true</active>
    <description>R178186</description>
    <label>BizSys Requests</label>
</RecordType>