unpackaged/main/default/objects/Survey__c/recordTypes/CSAT_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>CSAT_Case_Survey</fullName>
    <active>true</active>
    <description>CSAT survey type for cases</description>
    <label>CSAT Case Survey</label>
</RecordType>