unpackaged/main/default/objects/Survey__c/recordTypes/MyCase_NPS.recordType-meta.xml
<RecordType>
    <fullName>MyCase_NPS</fullName>
    <active>true</active>
    <label>MyCase: NPS</label>
</RecordType>