unpackaged/main/default/objects/Survey__c/recordTypes/MyCase_NPS_2014.recordType-meta.xml
<RecordType>
    <fullName>MyCase_NPS_2014</fullName>
    <active>true</active>
    <label>MyCase: NPS 2014</label>
</RecordType>