unpackaged/main/default/objects/Survey__c/recordTypes/MyCase_Onboarding_tNPS.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Onboarding_tNPS</fullName>
    <active>true</active>
    <label>MyCase: Onboarding tNPS</label>
</RecordType>