unpackaged/main/default/objects/Survey__c/recordTypes/MyCase_Payments_tNPS.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Payments_tNPS</fullName>
    <active>true</active>
    <description>R164986</description>
    <label>MyCase: Payments tNPS</label>
</RecordType>