unpackaged/main/default/objects/Survey__c/recordTypes/MyCase_Support_NPS.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Support_NPS</fullName>
    <active>true</active>
    <label>MyCase Support NPS</label>
</RecordType>