unpackaged/main/default/objects/Survey__c/recordTypes/MyCase_Websites_tNPS.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Websites_tNPS</fullName>
    <active>true</active>
    <description>Created by request R151468</description>
    <label>MyCase: Websites tNPS</label>
</RecordType>