unpackaged/main/default/objects/Survey__c/recordTypes/Rentlinx_Success.recordType-meta.xml
<RecordType>
    <fullName>Rentlinx_Success</fullName>
    <active>true</active>
    <label>Rentlinx: Success</label>
</RecordType>