unpackaged/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Score__c</columns>
    <columns>Score_Explanation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Completed_NPS_Survey__c</columns>
    <columns>NPS_Survey_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>