unpackaged/main/default/objects/Survey__c/listViews/All_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Surveys</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Brand__c</columns>
    <columns>Account__c</columns>
    <columns>Score__c</columns>
    <columns>Score_Explanation__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product_Environment__c</columns>
    <columns>Product_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Surveys</label>
</ListView>