unpackaged/main/default/objects/Survey__c/listViews/MyCase_NPS.listView-meta.xml
<ListView>
    <fullName>MyCase_NPS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Product_Environment__c</columns>
    <columns>Contact__c</columns>
    <columns>Product_User__c</columns>
    <columns>Score__c</columns>
    <columns>Score_Explanation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Completed_NPS_Survey__c</columns>
    <columns>NPS_Survey_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.MyCase_NPS</value>
    </filters>
    <filters>
        <field>Score__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>MyCase: NPS</label>
</ListView>