unpackaged/main/default/objects/Survey__c/listViews/MyCase_Onboarding_tnps.listView-meta.xml
<ListView>
    <fullName>MyCase_Onboarding_tnps</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Score__c</columns>
    <columns>Internal_Feedback__c</columns>
    <columns>Score_Explanation__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Onboarding__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.MyCase_Onboarding_tNPS</value>
    </filters>
    <label>MyCase Onboarding tnps</label>
</ListView>