unpackaged/main/default/objects/Survey__c/listViews/Support_tNPS.listView-meta.xml
<ListView>
    <fullName>Support_tNPS</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Completed_NPS_Survey__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Score__c</columns>
    <columns>Score_Explanation__c</columns>
    <columns>Score_Explanation_Question__c</columns>
    <columns>Possible_Improvements__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.MyCase_Support_NPS</value>
    </filters>
    <label>Support tNPS</label>
</ListView>